Ready to test: * For the calendar, i would use blue instead of green * I'm don't think it looks good to have the "X" sitting below the title. It's not a big deal but we will want to change this when we start styling more: * Make "new!" still bigger in left nav. * Upper left drop down nav line items still have too much vertical space between them. Probably can cut spacing by 30%. Do you mean upper right? * Still seeing IE 11 issues when making screen smaller

--- a/src/app/secure/pages/secure.sidenav.scss
+++ b/src/app/secure/pages/secure.sidenav.scss
@@ -1,5 +1,7 @@
+@import "../../../global";
+
 .responsive-nav .mat-sidenav {
-  background-color: #4460A9;
+  background-color: $dark-blue-color;
 }
 .wrapper {
   height:calc(100vh - 65px);
@@ -18,12 +20,12 @@
 
 .responsive-nav .nav-highlighted {
   background-color: white;
-  color:#4460A9;
+  color: $dark-blue-color;
 }
 
 .responsive-nav .mat-button:hover {
   background-color: white;
-  color:#4460A9;
+  color: $dark-blue-color;
 }
 
 .responsive-nav .level2 {
@@ -42,4 +44,8 @@ mat-sidenav ::-webkit-scrollbar {
 /* Handle */
 mat-sidenav ::-webkit-scrollbar-thumb {
   background: #fff;
+}
+
+.responsive-nav .green-badge {
+  font-size:70%
 }
