--- a/src/app/secure/pages/secure.topnav.scss
+++ b/src/app/secure/pages/secure.topnav.scss
@@ -47,8 +47,8 @@
   font-weight: bold;
   border-bottom: 1px solid #ccc;
   cursor: default;
-  line-height: 28px !important;
-  height: 32px !important;
+  line-height: 24px !important;
+  height: 28px !important;
 }
 
 .mat-menu-item.role-item:hover {
