--- a/src/global.scss
+++ b/src/global.scss
@@ -1,1 +1,3 @@
 $green-color: #30c827;
+$dark-blue-color: #4460A9;
+$light-border-color: #ccc;
