--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,11 +68,20 @@ a {
 
 
 .mat-menu-item {
-  line-height: 40px !important;
-  height: 40px !important;
+  line-height: 30px !important;
+  height: 30px !important;
 }
 
-.mat-calendar-body-cell:not(.mat-calendar-body-disabled):not(.mat-calendar-body-active) .mat-calendar-body-cell-content {
-  color: $green-color;
+.mat-calendar-body-cell:not(.mat-calendar-body-disabled) .mat-calendar-body-cell-content:not(.mat-calendar-body-selected) {
+  color: $dark-blue-color;
   font-weight: bold;
+}
+
+.dialog-title-bar {
+  border-bottom: 1px solid $light-border-color;
+  margin-bottom: 15px;
+}
+
+.dialog-title-bar .mat-dialog-title {
+  margin: 5px 0 5px 0;
 }
